# openeye-swig

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: conftest.py  test_build.py  test_content.py  test_generation.py  test_integration.py
{{cookiecutter.project_slug}}/: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  pyproject.toml  vrzn.toml
{{cookiecutter.project_slug}}/.github/workflows/: build-wheels.yml
{{cookiecutter.project_slug}}/include/{{cookiecutter.project_slug}}/: {{cookiecutter.project_slug}}.h
{{cookiecutter.project_slug}}/python/: pyproject.toml
{{cookiecutter.project_slug}}/python/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_slug}}/scripts/: build_python.py
{{cookiecutter.project_slug}}/src/: {{cookiecutter.project_slug}}.cpp
{{cookiecutter.project_slug}}/swig/: CMakeLists.txt  {{cookiecutter.project_slug}}.i
{{cookiecutter.project_slug}}/tests/cpp/: CMakeLists.txt  test_{{cookiecutter.project_slug}}.cpp
{{cookiecutter.project_slug}}/tests/python/: conftest.py  test_{{cookiecutter.project_slug}}.py
